--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,17 +14,15 @@ jobs:
     name: Build and Push to ECR
     runs-on: ubuntu-latest
     
-    # Is job ke outputs (results) hum doosre job mein istemal karenge
+    # Hum ab sirf 'image_tag' pass karenge
     outputs:
-      registry: ${{ steps.login-ecr.outputs.registry }}
       image_tag: ${{ github.sha }}
 
     steps:
-      # Step 1: Aapka code GitHub server par layega
+      # ... Job 1 ka baqi hissa bilkul waisa hi rahega ...
       - name: Check out the repo
         uses: actions/checkout@v3
 
-      # Step 2: AWS credentials set karega (secrets se)
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
@@ -32,12 +30,10 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      # Step 3: ECR par login karega
       - name: Login to Amazon ECR
         id: login-ecr 
         uses: aws-actions/amazon-ecr-login@v1
 
-      # Step 4: Docker image ko build, tag, aur push karega
       - name: Build, tag, and push image to Amazon ECR
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }} 
@@ -48,7 +44,7 @@ jobs:
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
   #########################################
-  # JOB 2: Naye image ko EC2 par deploy karega (FIXED AWS-CLI INSTALL)
+  # JOB 2: Naye image ko EC2 par deploy karega (FINAL FIXED VERSION)
   #########################################
   deploy-to-ec2:
     name: Deploy to EC2 Instance
@@ -66,39 +62,48 @@ jobs:
           
           # Yeh script aapke EC2 server par chalegi
           script: |
-            # Sab se pehle, server ko update karein
-            sudo apt update -y
+            # --- BEGIN SCRIPT ---
+            set -e # Agar koi command fail ho toh foran ruk jao
             
-            # 'unzip' install karein (kyunke AWS CLI zip file mein aati hai)
+            # 1. Update server aur install dependencies
+            sudo apt update -y
             sudo apt install unzip -y
             
-            # AWS CLI v2 ko official tareeqe se install karein (Yeh fix hai)
-            echo "Installing AWS CLI v2..."
+            # 2. Install/Update AWS CLI (FIXED: --update flag add kiya hai)
+            echo "Installing/Updating AWS CLI v2..."
             curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-            unzip awscliv2.zip
-            sudo ./aws/install
-            
-            # Installation ke baad safai karein
+            unzip -o awscliv2.zip # -o flag overwrite karega
+            sudo ./aws/install --update # --update flag pichli installation ko fix karega
             rm -rf awscliv2.zip aws
             
-            # Ab baqi commands wese hi chalengi...
-            # ECR par login karein (Yeh ab kaam karega)
-            echo "Logging into ECR..."
-            aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | docker login --username AWS --password-stdin ${{ needs.build-and-push.outputs.registry }}
+            # 3. AWS Account ID EC2 server se khud maloom karein (Yeh naya hai)
+            echo "Fetching AWS Account ID..."
+            TOKEN=$(curl -X PUT "http://169.254.169.254/latest/api/token" -H "X-aws-ec2-metadata-token-ttl-seconds: 21600")
+            AWS_ACCOUNT_ID=$(curl -H "X-aws-ec2-metadata-token: $TOKEN" -s http://169.254.169.254/latest/dynamic/instance-identity/document | grep accountId | awk -F'"' '{print $4}')
             
-            # Naya image pull karein
-            echo "Pulling new image..."
-            docker pull ${{ needs.build-and-push.outputs.registry }}/${{ secrets.ECR_REPOSITORY }}:${{ needs.build-and-push.outputs.image_tag }}
+            # 4. Sahi ECR Registry URL banayein
+            ECR_REGISTRY="$AWS_ACCOUNT_ID.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com"
             
-            # Purana container stop/rm
+            # 5. ECR par login karein (Yeh ab kamyab hoga)
+            echo "Logging into ECR at $ECR_REGISTRY..."
+            aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | docker login --username AWS --password-stdin $ECR_REGISTRY
+            
+            # 6. Sahi image ka naam banayein
+            IMAGE_NAME="$ECR_REGISTRY/${{ secrets.ECR_REPOSITORY }}:${{ needs.build-and-push.outputs.image_tag }}"
+            
+            # 7. Naya image pull karein
+            echo "Pulling $IMAGE_NAME"
+            docker pull $IMAGE_NAME
+            
+            # 8. Purana container stop/rm karein
             echo "Stopping old container..."
             docker stop my-python-app || true
             docker rm my-python-app || true
             
-            # Naya container run karein
+            # 9. Naya container run karein
             echo "Starting new container..."
-            docker run -d -p 5000:5000 --name my-python-app ${{ needs.build-and-push.outputs.registry }}/${{ secrets.ECR_REPOSITORY }}:${{ needs.build-and-push.outputs.image_tag }}
+            docker run -d -p 5000:5000 --name my-python-app $IMAGE_NAME
             
-            # Purane images ko delete karein
+            # 10. Purane images ko delete karein
             echo "Pruning old images..."
             docker image prune -a -f
